import { Entity, Column, PrimaryGeneratedColumn, CreateDateColumn } from 'typeorm';

@Entity('messages')
export class Message {
  @PrimaryGeneratedColumn('uuid')
  id: string;

  @Column()
  conversationId: string;

  @Column()
  senderId: string; // Just store user ID as string for now

  @Column('text')
  content: string;

  @CreateDateColumn()
  createdAt: Date;
}